# tractviewer

./: README.md  gen_tracts.py  pyproject.toml  tracts.npy  tracts_interactive.py
tractviewer/: __main__.py  app.py  io.py  utils.py
tractviewer/ui/: grid.py  main.py  mri.py
